--- a/DMCombatScreen.Data/DMCombatScreen.Data.csproj
+++ b/DMCombatScreen.Data/DMCombatScreen.Data.csproj
@@ -58,11 +58,28 @@
     <Compile Include="Character.cs" />
     <Compile Include="Combat.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\201907011526317_InitialCreate.cs" />
+    <Compile Include="Migrations\201907011526317_InitialCreate.Designer.cs">
+      <DependentUpon>201907011526317_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201907011533319_nullableInts.cs" />
+    <Compile Include="Migrations\201907011533319_nullableInts.Designer.cs">
+      <DependentUpon>201907011533319_nullableInts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201907011526317_InitialCreate.resx">
+      <DependentUpon>201907011526317_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907011533319_nullableInts.resx">
+      <DependentUpon>201907011533319_nullableInts.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
