--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterCreate.cs" />
     <Compile Include="CharacterListItem.cs" />
     <Compile Include="CharacterPlayerCreate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
