initial character crud complete

--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -43,8 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterCreate.cs" />
+    <Compile Include="CharacterDetail.cs" />
+    <Compile Include="CharacterEdit.cs" />
     <Compile Include="CharacterListItem.cs" />
-    <Compile Include="CharacterPlayerCreate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
