--- a/DMCombatScreen.Data/DMCombatScreen.Data.csproj
+++ b/DMCombatScreen.Data/DMCombatScreen.Data.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\201907011533319_nullableInts.Designer.cs">
       <DependentUpon>201907011533319_nullableInts.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907011845493_OwnerIDForCombat.cs" />
+    <Compile Include="Migrations\201907011845493_OwnerIDForCombat.Designer.cs">
+      <DependentUpon>201907011845493_OwnerIDForCombat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -79,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907011533319_nullableInts.resx">
       <DependentUpon>201907011533319_nullableInts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907011845493_OwnerIDForCombat.resx">
+      <DependentUpon>201907011845493_OwnerIDForCombat.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
