attendance initial crud complete

--- a/DMCombatScreen.Data/DMCombatScreen.Data.csproj
+++ b/DMCombatScreen.Data/DMCombatScreen.Data.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\201907011957544_addedAttendances.Designer.cs">
       <DependentUpon>201907011957544_addedAttendances.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907021258073_attendanceHPnullable.cs" />
+    <Compile Include="Migrations\201907021258073_attendanceHPnullable.Designer.cs">
+      <DependentUpon>201907021258073_attendanceHPnullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -93,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907011957544_addedAttendances.resx">
       <DependentUpon>201907011957544_addedAttendances.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907021258073_attendanceHPnullable.resx">
+      <DependentUpon>201907021258073_attendanceHPnullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
