--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -55,6 +55,8 @@
     <Compile Include="CombatEdit.cs" />
     <Compile Include="CombatListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunCombatDetail.cs" />
+    <Compile Include="RunCombatListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DMCombatScreen.Data\DMCombatScreen.Data.csproj">
