--- a/DMCombatScreen.Services/DMCombatScreen.Services.csproj
+++ b/DMCombatScreen.Services/DMCombatScreen.Services.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CharacterService.cs" />
     <Compile Include="CombatService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunCombatService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DMCombatScreen.Data\DMCombatScreen.Data.csproj">
