--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CombatListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunCombatDetail.cs" />
+    <Compile Include="RunCombatInitiative.cs" />
     <Compile Include="RunCombatListItem.cs" />
   </ItemGroup>
   <ItemGroup>
