--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CombatEdit.cs" />
     <Compile Include="CombatListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunCombatAttack.cs" />
     <Compile Include="RunCombatCharacter.cs" />
     <Compile Include="RunCombatDetail.cs" />
     <Compile Include="RunCombatInitiative.cs" />
