--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttendanceAddCharacter.cs" />
+    <Compile Include="AttendanceCharacterInfo.cs" />
     <Compile Include="AttendanceCreate.cs" />
     <Compile Include="AttendanceDetail.cs" />
     <Compile Include="AttendanceEdit.cs" />
