added sort by name for character add list, implemented jquery

--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttendanceAddCharacter.cs" />
+    <Compile Include="AttendanceAddCharactersFiltersVM.cs" />
     <Compile Include="AttendanceCharacterInfo.cs" />
     <Compile Include="AttendanceCreate.cs" />
     <Compile Include="AttendanceDetail.cs" />
