--- a/DMCombatScreen.Services/DMCombatScreen.Services.csproj
+++ b/DMCombatScreen.Services/DMCombatScreen.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AttendanceService.cs" />
     <Compile Include="CharacterService.cs" />
     <Compile Include="CombatService.cs" />
+    <Compile Include="ConditionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunCombatService.cs" />
   </ItemGroup>
