--- a/DMCombatScreen.WebMVC/DMCombatScreen.WebMVC.csproj
+++ b/DMCombatScreen.WebMVC/DMCombatScreen.WebMVC.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\AttendanceController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\CombatController.cs" />
+    <Compile Include="Controllers\ConditionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RunCombatController.cs" />
@@ -260,6 +261,8 @@
     <Content Include="Views\RunCombat\RunCombat.cshtml" />
     <Content Include="Views\RunCombat\Attack.cshtml" />
     <Content Include="Views\Attendance\CreateMultiple.cshtml" />
+    <Content Include="Views\Condition\Index.cshtml" />
+    <Content Include="Views\Condition\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
