--- a/DMCombatScreen.Models/DMCombatScreen.Models.csproj
+++ b/DMCombatScreen.Models/DMCombatScreen.Models.csproj
@@ -57,6 +57,8 @@
     <Compile Include="CombatEdit.cs" />
     <Compile Include="CombatListItem.cs" />
     <Compile Include="ConditionCreate.cs" />
+    <Compile Include="ConditionDetail.cs" />
+    <Compile Include="ConditionEdit.cs" />
     <Compile Include="ConditionListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunCombatAttack.cs" />
