--- a/DMCombatScreen.WebMVC/DMCombatScreen.WebMVC.csproj
+++ b/DMCombatScreen.WebMVC/DMCombatScreen.WebMVC.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Condition\Create.cshtml" />
     <Content Include="Views\Condition\Detail.cshtml" />
     <Content Include="Views\Condition\Edit.cshtml" />
+    <Content Include="Views\Condition\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
